<resources>
    <string name="app_name">河道巡查</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="cancel">取消</string>
    <string name="login_in">登录</string>
    <string name="account">账号</string>
    <string name="pwd">密码</string>
    <string name="forget_pwd">忘记密码？</string>
</resources>
