<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="cn.edu.njnu.vgekl.riverpatrol.LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="#009fcc">
        <Button
            android:id="@+id/cancel"
            android:layout_width="60dp"
            android:layout_height="36dp"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:background="#87CECB"/>
        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="20dip"
            android:text="用户登录"/>

        <Button
            android:id="@+id/login_in"
            android:layout_width="60dp"
            android:layout_height="36dp"
            android:layout_marginRight="10dp"
            android:background="#87CECB"
            android:text="@string/login_in"
            android:textColor="#ffffff"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/accountRel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:clickable="true"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/account"
            android:padding="8dp"
            android:text="@string/account"
            android:textColor="#000"
            android:layout_centerVertical="true"
            android:textSize="17sp"
            />
        <EditText
            android:id="@+id/accountEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dip"
            android:layout_toRightOf="@+id/account"
            android:hint="@string/account"
            android:textSize="15sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pwdRel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/accountRel"
        android:clickable="true"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/pwd"
            android:textColor="#000"
            android:textSize="17sp"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dip"
            android:layout_toRightOf="@+id/pwd"
            android:hint="@string/pwd"
            android:textSize="15sp"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sound_help"
        android:layout_marginTop="15dip"
        android:layout_marginLeft="15dip"
        android:text="@string/forget_pwd"
        android:textColor="#008B8B"/>

</LinearLayout>
